from my-llamacpp to llm-dock-llamacpp

--- a/dashboard/templates/llamacpp.j2
+++ b/dashboard/templates/llamacpp.j2
@@ -1,5 +1,5 @@
   {{ service_name }}:
-    image: my-llamacpp
+    image: llm-dock-llamacpp
     container_name: {{ service_name }}
     restart: no
 
